# hwtBuildsystem

./: .coveragerc  .gitignore  .project  MANIFEST.in  README.md  pyproject.toml  setup.py
doc/: conf.py  index.rst  requirements.txt
hwtBuildsystem/: fileUtils.py  shortcuts.py  stringUtils.py  unitMyHdl.py
hwtBuildsystem/altium/: scheme.py  schemeObjs.py  schemeTypes.py
hwtBuildsystem/cli_utils/: hwModule_from_cli_args.py  unit_from_cli_args.py
hwtBuildsystem/common/: cmdResult.py  executor.py  project.py  tcl.py
hwtBuildsystem/examples/: .gitignore  example_HwModule.py  example_units.py  synthetizeHwModule.py  synthetizeUnit.py
tests/: ExampleTop0_synth_trace.quartus_arria10.json  ExampleTop0_synth_trace.vivado_kintex7.json  ExampleTop0_synth_trace.yosys_ice40.json  MultiConfigHwModuleWrapper_3x_same_io_type_different_int_param.vhd  MultiConfigHwModuleWrapper_Axi4Lite.vhd  MultiConfigHwModuleWrapper_same_io_type_different_int_param.v  MultiConfigHwModuleWrapper_same_io_type_different_int_param.vhd  MultiConfigHwModuleWrapper_same_io_type_different_int_param_irrelevant_param.vhd  MultiConfigHwModuleWrapper_same_io_type_different_int_param_irrelevant_param_and_second_param.vhd  SimpleUnitAxiStreamTop_synth_trace.json  SimpleUnitAxiStreamTop_utilization_synth.rpt  all.py  base_serialization_TC.py  cli_utils_test.py  controller.py  controller_test.py  multiConfigHwModuleWrapper_test.py  multiConfigUnitWrapper_test.py  paramEmptyHwModule.vhd  paramEmptyUnit.vhd  quartusSynthLogParser_test.py  vivadoSynthLogParser_test.py  yosysSynthLogParser_test.py
(+161 files in other folders)
